log
Fri, Mar 21, 2025 10:17:55 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:28:44 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:14: error: dereferencing 'void *' pointer [-Werror]
       suma = *num;
              ^~~~
exercises.c:64:12: error: void value not ignored as it ought to be
       suma = *num;
            ^
exercises.c:61:8: error: variable 'suma' set but not used [-Werror=unused-but-set-variable]
    int suma = 0;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a1e2550
Fri, Mar 21, 2025 10:29:08 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *num;
               ^~~~
exercises.c:64:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
f4b7f23
Fri, Mar 21, 2025 10:29:26 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
ab0b693
Fri, Mar 21, 2025 10:29:48 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += (int*)num;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
abc7b04
